--- a/main.css
+++ b/main.css
@@ -129,7 +129,7 @@ img.scnd-menu-btn {
   padding: 12px 16px;
   border-radius: 10px;
   background-color: #F3F9FB;
-  width: 507px;
+  width: 53%;
 }
 
 .scnd-list {
@@ -1028,7 +1028,7 @@ p {
 }
 
 .card-img-top {
-  padding: 20px 51px;
+  padding: 10px 51px 0px 51px;
   background-color: #F5F5F5;
 }
 
